--- a/src/main/ts.html
+++ b/src/main/ts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>实验3</title>
+    <title>www</title>
     <style type="text/css">
         ul{/*设置导航栏的框框*/
             margin: 30px auto;/*框框整体的位置，30px是指离网页的顶部和下部的距离，auto控制的是左右距离为自动调节*/
