--- a/src/main/webapp/ts.html
+++ b/src/main/webapp/ts.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>www</title>
+    <title>实验3</title>
     <style type="text/css">
+
         ul{/*设置导航栏的框框*/
-            margin: 30px auto;/*框框整体的位置，30px是指离网页的顶部和下部的距离，auto控制的是左右距离为自动调节*/
-            width: 600px;/*框框的宽度*/
-            height: 350px;/*框框的长度*/
+            margin: 0px auto;/*框框整体的位置，30px是指离网页的顶部和下部的距离，auto控制的是左右距离为自动调节*/
+            width: 100%;/*框框的宽度*/
+            height: 100%;/*框框的长度*/
             padding: 0px;/*将框框的padding设置为零，不然会导致框框里的内容与框边缘有间隔*/
             border:1px solid #000;/*添加边框*/
         }
@@ -17,7 +18,7 @@
         }
         a{
             display: block;/*将a变成块状*/
-            width: 150px;/*设置块的宽度*/
+            width: 350px;
             height: 50px;/*设置块的长度*/
             font-family: Microsoft Yahei;
             line-height: 50px;/*设置字体在块中的高度*/
@@ -31,23 +32,98 @@
         a:hover{
             background-color: #2f6f4f;
         }
+
+
+        /*设置搜索框样式*/
+        .search_form{
+            width:602px;
+            height:42px;
+        }
+        .search_box{
+            position: fixed;
+            top:65px;
+            left:50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+            /*background: #00CCFF;*/
+        }
+
+        /*左边输入框设置样式*/
+        .input_text{
+            width:400px;
+            height: 40px;
+            border:1px solid green;
+            /*清除掉默认的padding*/
+            padding:0px;
+
+            /*提示字首行缩进*/
+            text-indent: 10px;
+
+            /*去掉蓝色高亮框*/
+            outline: none;
+
+            /*用浮动解决内联元素错位及小间距的问题*/
+            float:left;
+        }
+
+        .input_sub{
+            width:100px;
+            height: 42px;
+            background: green;
+
+            /*去掉submit按钮默认边框*/
+            border:0px;
+            /*改成右浮动也是可以的*/
+            float:left;
+            color:white;/*搜索的字体颜色为白色*/
+            cursor:pointer;/*鼠标变为小手*/
+        }
+
+
     </style>
+
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <!-- 关键一：引入jQuery库文件 -->
+    <script type="text/javascript">
+        $(function(){
+            $(".menu_box").mouseover(function(){
+                $(this).children("ul").show();
+            })
+
+        })
+        // 关键二：正确使用jQuey的语法完成行为。
+        $(function(){
+            $(".menu_box") .mouseout(function(){
+                $(this).children("ul").hide();
+            })
+
+        })
+    </script>
 </head>
 <body>
 <div >
     <ul class=daohang>
         <li><a href="">首页</a></li>
         <li><a href="">搜索</a></li>
-        <li><a href="">购物</a></li>
-        <li><a href="">回到首页</a></li>
+        <li><a href="">购物车</a></li>
+        <li class="menu_box"><a href="">游戏分类</a>
+            <ul class="menu_2box">
+                <div><a href="#">解密类</a></div>
+                <div><a href="#">解密类</a></div>
+            </ul>
+        </li>
     </ul>
 </div>
-<p>
-    <div>
+<div class="search_box">
+    <p>
+        <form class="search_form">
+            <input type="text" class="input_text" placeholder="请输入搜索内容"><!-- -->
+            <input type="submit" value="搜索" class="input_sub">
+    <p>
+</div>
 
-    </div>
-</p>
 
 
-</table>
+
 </body>
+</html>
