--- a/src/main/webapp/ts.html
+++ b/src/main/webapp/ts.html
@@ -6,8 +6,11 @@
     <title>实验3</title>
     <link rel="stylesheet" href="css/navigator.css">
     <link rel="stylesheet" href="css/search.css">
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
+
     <script type="text/javascript">
         $(document).ready(function ()
         {
@@ -44,6 +47,121 @@
         </ul>
     </div>
 
+
+    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <img src="img/pic.jpg" width="180px">
+                        <a>东方虹龙洞</a>
+                        <a>库存: 999</a>
+                        <label style="font-size: 16px;">数量</label>
+                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-primary">下单</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <img src="img/pic.jpg" width="180px">
+                        <a>东方虹龙洞</a>
+                        <a>库存: 999</a>
+                        <label style="font-size: 16px;">数量</label>
+                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-primary">下单</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <img src="img/pic.jpg" width="180px">
+                        <a>东方虹龙洞</a>
+                        <a>库存: 999</a>
+                        <label style="font-size: 16px;">数量</label>
+                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-primary">下单</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <img src="img/pic.jpg" width="180px">
+                        <a>东方虹龙洞</a>
+                        <a>库存: 999</a>
+                        <label style="font-size: 16px;">数量</label>
+                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-primary">下单</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+        <div class="row">
+            <div class="col-lg-12">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <img src="img/pic.jpg" width="180px">
+                        <a>东方虹龙洞</a>
+                        <a>库存: 999</a>
+                        <label style="font-size: 16px;">数量</label>
+                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-primary">下单</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div style="width:50pc; margin:auto;">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+
+                <!--JSP Generate It!!!-->
+                <li class="page-item active"><a class="page-link" href="#">114514</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <li class="page-item"><a class="page-link" href="#">114515</a></li>
+                <!--JSP Generate It!!!-->
+
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    </div>
 </body>
 
 </html>
