--- a/src/main/webapp/ts.html
+++ b/src/main/webapp/ts.html
@@ -4,164 +4,85 @@
 <head>
     <meta charset="utf-8">
     <title>实验3</title>
-    <link rel="stylesheet" href="css/navigator.css">
-    <link rel="stylesheet" href="css/search.css">
+
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function ()
-        {
-            $(".navigator_list_elm_category").mouseover(function ()
-            {
-                $(this).children("ul").show();
-            });
-            $(".navigator_list_elm_category").mouseout(function ()
-            {
-                $(this).children("ul").hide();
-            });
-        })
-    </script>
 </head>
 
 <body>
-    <div>
-        <ul class="navigator_list">
-            <li class="navigator_list_elm"><a class="navigator_block">首页</a></li>
-            <li class="navigator_list_elm"><a class="navigator_block">购物车</a></li>
-            <li class="navigator_list_elm_category">
-                <a class="navigator_block">分类</a>
-                <ul class="navigator_category">
-                    <div><a class="navigator_block">解密类</a></div>
-                    <div><a class="navigator_block">动作类</a></div>
+
+    <!-- 导航栏 -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" alt="蒸汽平台精神续作——电气平台">Electricity</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">首页</a></li>
+                    <li><a href="#">我的购物车</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                            aria-expanded="false">分类<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <!--后序加入游戏分类-->
+                            <li><a href="#">动作类</a></li>
+                            <li><a href="#">射击类</a></li>
+                            <li><a href="#">解谜类</a></li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li class="navigator_list_elm">
-                <form>
-                    <input type="text" class="search_textinput" placeholder="请输入搜索内容">
-                    <input type="submit" class="search_button" value="搜索">
-                </form>
-            </li>
-        </ul>
-    </div>
-
-
-    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
-        <div class="row">
-            <div class="col-lg-12">
-                <form class="form-inline">
+                <!--查询Servlet-->
+                <form class="navbar-form navbar-right">
                     <div class="form-group">
-                        <img src="img/pic.jpg" width="180px">
-                        <a>东方虹龙洞</a>
-                        <a>库存: 999</a>
-                        <label style="font-size: 16px;">数量</label>
-                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                        <button type="submit" class="btn btn-primary">下单</button>
+                        <input type="text" name="category_search" placeholder="在这里输入要搜索的内容" class="form-control">
                     </div>
+                    <button type="submit" class="btn btn-success">搜索</button>
                 </form>
             </div>
         </div>
-    </div>
-    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
+    </nav>
+
+    <div style="height: 64px;"></div>
+
+    <!--首页展示卡片-->
+    <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <img src="img/pic.jpg" width="180px">
-                        <a>东方虹龙洞</a>
-                        <a>库存: 999</a>
-                        <label style="font-size: 16px;">数量</label>
-                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                        <button type="submit" class="btn btn-primary">下单</button>
+            <!-- FOR JSP -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞之没有这么长名字的游戏吧。</h3>
+                        <p style="margin: 0px;">
+                            <span style="color: orange;font-size: 24px; vertical-align: middle;">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
-        <div class="row">
-            <div class="col-lg-12">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <img src="img/pic.jpg" width="180px">
-                        <a>东方虹龙洞</a>
-                        <a>库存: 999</a>
-                        <label style="font-size: 16px;">数量</label>
-                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                        <button type="submit" class="btn btn-primary">下单</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
-        <div class="row">
-            <div class="col-lg-12">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <img src="img/pic.jpg" width="180px">
-                        <a>东方虹龙洞</a>
-                        <a>库存: 999</a>
-                        <label style="font-size: 16px;">数量</label>
-                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                        <button type="submit" class="btn btn-primary">下单</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div style="background-color: rgba(48, 110, 183, 0.1);margin-left: 10pc;margin-right: 10pc;margin-top: 16px;">
-        <div class="row">
-            <div class="col-lg-12">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <img src="img/pic.jpg" width="180px">
-                        <a>东方虹龙洞</a>
-                        <a>库存: 999</a>
-                        <label style="font-size: 16px;">数量</label>
-                        <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                        <button type="submit" class="btn btn-primary">下单</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div style="width:50pc; margin:auto;">
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                </li>
-
-                <!--JSP Generate It!!!-->
-                <li class="page-item active"><a class="page-link" href="#">114514</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <li class="page-item"><a class="page-link" href="#">114515</a></li>
-                <!--JSP Generate It!!!-->
-
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    </div>
 </body>
 
 </html>
