--- a/src/main/webapp/ts.html
+++ b/src/main/webapp/ts.html
@@ -5,9 +5,13 @@
     <meta charset="utf-8">
     <title>实验3</title>
 
+    <!-- JQuery, Bootstrap-->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- 首页所用样式表 -->
+    <link href="css/index_page.css" rel="stylesheet">
 
 </head>
 
@@ -52,19 +56,215 @@
         </div>
     </nav>
 
-    <div style="height: 64px;"></div>
-
     <!--首页展示卡片-->
     <div class="container">
+
+        <div class="jumbotron">
+            <h2>欢迎来到Electricity！</h2>
+            <p>在这里你可以买到超低价的游戏激活CDK！看看下面这些最新上架的游戏吧！</p>
+        </div>
+
         <div class="row">
             <!-- FOR JSP -->
             <div class="col-md-3">
                 <div class="thumbnail">
                     <img src="img/pic.jpg">
                     <div class="caption">
-                        <h3>东方虹龙洞之没有这么长名字的游戏吧。</h3>
+                        <h3>东方虹龙洞</h3>
                         <p style="margin: 0px;">
-                            <span style="color: orange;font-size: 24px; vertical-align: middle;">￥50</span>
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
+                            <span class="label label-default">库存: 100</span>
+                        </p>
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">购买</span>
+                                    <input type="number" class="form-control" name="amount" value="1"
+                                        aria-describedby="basic-addon2">
+                                    <input type="hidden" name="id" value="0001">
+                                    <span class="input-group-addon" id="basic-addon2">份</span>
+                                </div>
+                            </div>
+                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="img/pic.jpg">
+                    <div class="caption">
+                        <h3>东方虹龙洞</h3>
+                        <p style="margin: 0px;">
+                            <span class="price_text">￥50</span>
                             <span class="label label-default">库存: 100</span>
                         </p>
                         <form>
