动态生成主页

--- a/src/main/webapp/ts.html
+++ b/src/main/webapp/ts.html
@@ -65,10 +65,10 @@
         </div>
 
         <div class="row">
-            <!-- FOR JSP -->
+
             <div class="col-md-3">
                 <div class="thumbnail">
-                    <img src="img/pic.jpg">
+                    <img src="img/touhou_honglongdong.jpg">
                     <div class="caption">
                         <h3>东方虹龙洞</h3>
                         <p style="margin: 0px;">
@@ -90,199 +90,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="img/pic.jpg">
-                    <div class="caption">
-                        <h3>东方虹龙洞</h3>
-                        <p style="margin: 0px;">
-                            <span class="price_text">￥50</span>
-                            <span class="label label-default">库存: 100</span>
-                        </p>
-                        <form>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">购买</span>
-                                    <input type="number" class="form-control" name="amount" value="1"
-                                        aria-describedby="basic-addon2">
-                                    <input type="hidden" name="id" value="0001">
-                                    <span class="input-group-addon" id="basic-addon2">份</span>
-                                </div>
-                            </div>
-                            <div><button type="submit" class="btn btn-default">加入购物车</button></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+
         </div>
+    </div>
+
 </body>
 
 </html>
