购物车界面 、购买成功/购买失败

--- a/src/main/webapp/分类.html
+++ b/src/main/webapp/分类.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link href="css/index_page.css" rel="stylesheet">
 <body>
     <div>首页</div>
     <div class="container">
