--- a/src/main/webapp/购物车.html
+++ b/src/main/webapp/购物车.html
@@ -7,64 +7,74 @@
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="css/index_page.css" rel="stylesheet">
 <body>
-
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" alt="蒸汽平台精神续作——电气平台">Electricity</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#">首页</a></li>
+                <li><a href="#">我的购物车</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">分类<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <!--后序加入游戏分类-->
+                        <li><a href="#">动作类</a></li>
+                        <li><a href="#">射击类</a></li>
+                        <li><a href="#">解谜类</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <!--查询Servlet-->
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" name="category_search" placeholder="在这里输入要搜索的内容" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">搜索</button>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container">
+
+    <div class="page-header">
+        <br>
+        <h1> <label style="font-size: 60px;">您的购物车</label></h1>
+    </div>
+
     <div class="row">
-        <div class="col-md-10">
-       <label style="font-size: 60px;">您的购物车</label></li>
-        </div>
         <div style="background-color: rgba(18,74,158,0.1);margin-left: 0;margin-right: 0;margin-top: 16px;">
             <div class="row">
-                <div class="col-lg-12">
-                    <form class="form-inline">
-                        <div class="form-group">
+                <div class="col-lg-6">
                             <img src="img/pic.jpg" width="180px">
                             <a>东方虹龙洞</a>
-                            <a>库存: 999</a>
-                            <label style="font-size: 16px;">数量</label>
+                            <label style="font-size: 16px;">数量 1</label>
+                </div>
+                <div class="col-lg-6">
+                    <form class="form-inline" ytle="margin: centre">
+                        <div class="form-group">
                             <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                            <button type="submit" class="btn btn-primary">下单</button>
+                            <button type="submit" class="btn btn-primary">更改</button>
                             <button type="button" class="btn btn-primary">移除</button>
+                            <label style="font-size: 16px;">小计 50 </label>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div style="background-color: rgba(18,74,158,0.1);margin-left: 0;margin-right: 0;margin-top: 16px;">
-            <div class="row">
-                <div class="col-lg-12">
-                    <form class="form-inline">
-                        <div class="form-group">
-                            <img src="img/pic.jpg" width="180px">
-                            <a>东方虹龙洞</a>
-                            <a>库存: 999</a>
-                            <label style="font-size: 16px;">数量</label>
-                            <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                            <button type="submit" class="btn btn-primary">下单</button>
-                            <button type="button" class="btn btn-primary">移除</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div style="background-color: rgba(18,74,158,0.1);margin-left: 0;margin-right: 0;margin-top: 16px;">
-            <div class="row">
-                <div class="col-lg-12">
-                    <form class="form-inline">
-                        <div class="form-group">
-                            <img src="img/pic.jpg" width="180px">
-                            <a>东方虹龙洞</a>
-                            <a>库存: 999</a>
-                            <label style="font-size: 16px;">数量</label>
-                            <input type="number" class="form-control" placeholder="" aria-describedby="helpId">
-                            <button type="submit" class="btn btn-primary">下单</button>
-                            <button type="button" class="btn btn-primary">移除</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col-md-6"> <label style="font-size: 16px;">预计总额：</label></div>
             <div class="col-md-4 offset-md2"><label style="font-size: 16px;">金额</label></div>
